--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
-streamlit
-torch==2.6.0
-torchvision==0.21.0
-snntorch
-numpy
-ultralytics
-pandas
-scikit-learn
-matplotlib
-Pillow
+# Core Python libraries (usually pre-installed, but listed for clarity)
+numpy>=1.23.0
+Pillow>=9.5.0
+
+# Streamlit for web app interface
+streamlit>=1.25.0
+
+# PyTorch and TorchVision (ensure CUDA/CPU compatibility with your system)
+torch>=2.0.0
+torchvision>=0.15.0
+
+# Ultralytics YOLO
+ultralytics>=8.0.0
+
+# SNNtorch for spiking neural networks
+snntorch>=0.6.0
