--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-# Core Python libraries (usually pre-installed, but listed for clarity)
 numpy>=1.23.0
 Pillow>=9.5.0
 
 # Streamlit for web app interface
 streamlit>=1.25.0
 
-# PyTorch and TorchVision (ensure CUDA/CPU compatibility with your system)
+# PyTorch and TorchVision (match CUDA/CPU build to your system)
 torch>=2.0.0
 torchvision>=0.15.0
 
@@ -14,3 +13,6 @@ ultralytics>=8.0.0
 
 # SNNtorch for spiking neural networks
 snntorch>=0.6.0
+
+# OpenCV (needed by ultralytics)
+opencv-python>=4.8.0
