--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,8 @@
-numpy>=1.23.0
-Pillow>=9.5.0
-
-# Streamlit for web app interface
-streamlit>=1.25.0
-
-# PyTorch and TorchVision (match CUDA/CPU build to your system)
-torch>=2.0.0
-torchvision>=0.15.0
-
-# Ultralytics YOLO
-ultralytics>=8.0.0
-
-# SNNtorch for spiking neural networks
-snntorch>=0.6.0
-
-# OpenCV (needed by ultralytics)
-opencv-python>=4.8.0
+streamlit
+ultralytics
+opencv-python-headless
+torch
+torchvision
+numpy
+Pillow
+snntorch
