--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit
-ultralytics
+streamlit==1.39.0
+ultralytics==8.3.0
+torch==2.5.0
+torchvision==0.20.0
+numpy==2.1.1
+Pillow==11.0.0
 opencv-python-headless==4.10.0.84
-torch
-torchvision
-numpy
-Pillow
-snntorch
+snntorch==0.8.2
