--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.39.0
-ultralytics==8.0.34
-torch==2.0.1
-torchvision==0.15.2
+streamlit
+ultralytics
+torch==2.6.0
+torchvision==0.21.0
 numpy==2.1.1
 Pillow==11.0.0
 opencv-python-headless==4.10.0.84
